# interview_questions

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  app.cppm  main.cpp  mediator.cppm  problem_name.cppm
src/exceptions/: invalid_state_error.cppm  not_implemented_error.cppm
src/generators/: generator_base.cppm  i_generator.cppm  max_sum.cppm  two_tourists.cppm
src/mediators/: i_mediator.cppm  mediator.cppm  mediator_factory.cppm
src/problems/: i_problems_perm_storage.cppm  problems_repo.cppm
src/solvers/: i_solver.cppm  max_sum.cppm  solver_base.cppm  two_tourists.cppm
src/utils/: i_mediator.cppm  mediator.cppm  mediator_factory.cppm  string_unordered_map.cppm  to_string.cppm
tests/: CMakeLists.txt
tests/fixtures/: CMakeLists.txt
tests/fixtures/problems/: problems_repo.cpp  problems_repo.hpp
tests/integration/: CMakeLists.txt
tests/integration/mediators/: mediator_test.cpp
tests/mocks/: CMakeLists.txt
tests/mocks/problems/: problems_perm_storage.cpp  problems_perm_storage.hpp
tests/unit/: CMakeLists.txt
tests/unit/exceptions/: invalid_state_error_test.cpp  not_implemented_error_test.cpp
tests/unit/generators/: max_sum_test.cpp  two_tourists.cpp  two_tourists_test.cpp
tests/unit/problems/: problems_repo.cpp
tests/unit/solvers/: max_sum_test.cpp  two_tourists_test.cpp
tests/unit/utils/: to_string_test.cpp
